css/index.css
body {
    margin: 0;
}

.github-link-container{

    text-align:center;
    margin-top: 10px;

}
.github-link{
        text-decoration: none;
color:rgb(0, 120, 73);
}

.results {
    display: inline-block;;
    position: absolute;
    visibility: hidden;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    width: 90%;
    height: 90%;
    background-color: white;
    border: 3px solid grey;
    z-index: 4;
    opacity: 0.9;
     -webkit-transition:width 300ms ease-in-out, height 300ms ease-in-out;
    -moz-transition:width 300ms ease-in-out, height 300ms ease-in-out;
    -o-transition:width 300ms ease-in-out, height 300ms ease-in-out;
    transition:width 300ms ease-in-out, height 300ms ease-in-out;
}
.hide {
    visibility: hidden;
}
@media (min-width: 768px) {
    #overlay {
        position: absolute;
        width: 100%;
        height: 100%;
        background:rgba(0,0,0,0.6);
        z-index: 2;
        visibility: hidden
    }

}

@media (max-width: 767px) {
    #overlay {
        position: absolute;
        width: 100%;
        height: 150%;
        background:rgba(0,0,0,0.6);
        z-index: 2;
        visibility: hidden
    }

}

